# openmesh-messenger

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SRS.md
.github/workflows/: images.yml  signaling-image.yml
cli/: CMakeLists.txt  README.md
cli/src/: main.cpp  tui.cpp  tui.hpp
client/: CMakeLists.txt  README.md
client/qml/: Main.qml
client/qml/screens/: ChatScreen.qml  ContactsScreen.qml
client/src/app/: main.cpp
client/src/bridge/: app_controller.cpp  app_controller.hpp
cmake/: FindSodium.cmake  OpenMeshWarnings.cmake  Sodium.cmake
deploy/: README.md
deploy/k8s/: relay.yaml  signaling.yaml
docker/: relay.Dockerfile  signaling.Dockerfile
docs/: README.md
docs/adr/: 0001-monorepo-structure.md  0002-crypto-primitives.md
docs/architecture/: overview.md
docs/crypto/: design.md
docs/protocol/: signaling.md  wire-format.md
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  README.md
libs/core/include/openmesh/core/: hex.hpp  logging.hpp  version.hpp
libs/core/src/: logging.cpp
libs/core/tests/: CMakeLists.txt  test_logging.cpp
libs/crypto/: CMakeLists.txt  README.md
libs/crypto/include/openmesh/crypto/: aead.hpp  common.hpp  identity.hpp  init.hpp  kdf.hpp  key_agreement.hpp  random.hpp  sign.hpp
libs/crypto/src/: aead.cpp  identity.cpp  init.cpp  kdf.cpp  key_agreement.cpp  random.cpp  sign.cpp
libs/crypto/tests/: CMakeLists.txt  test_identity.cpp
libs/messaging/: CMakeLists.txt  README.md
libs/messaging/include/openmesh/messaging/: engine.hpp  session.hpp
libs/messaging/src/: engine.cpp  session.cpp
libs/messaging/tests/: CMakeLists.txt  test_contacts.cpp  test_engine.cpp  test_holepunch.cpp  test_session.cpp
libs/net/: CMakeLists.txt  README.md
libs/net/include/openmesh/net/: endpoint.hpp  signaling_client.hpp  udp_socket.hpp
libs/net/src/: signaling_client.cpp  transport.cpp  udp_socket.cpp
libs/net/tests/: CMakeLists.txt  test_endpoint.cpp  test_signaling_client.cpp  test_udp_socket.cpp
libs/protocol/: CMakeLists.txt  README.md
libs/protocol/include/openmesh/protocol/: packet.hpp  packet_type.hpp
libs/protocol/src/: packet.cpp
libs/protocol/tests/: CMakeLists.txt  test_packet.cpp
libs/storage/: CMakeLists.txt  README.md
libs/storage/include/openmesh/storage/: contact.hpp  identity_store.hpp  store.hpp
libs/storage/src/: blob.cpp  blob.hpp  identity_store.cpp  store.cpp
libs/storage/tests/: CMakeLists.txt  test_persistence.cpp  test_store.cpp
scripts/: format.sh
servers/relay/: CMakeLists.txt  README.md
servers/relay/config/: relay.example.toml
servers/relay/src/: main.cpp  router.cpp  router.hpp  server.cpp  server.hpp
servers/relay/tests/: CMakeLists.txt  test_e2e.cpp  test_router.cpp  test_server.cpp
servers/signaling/: CMakeLists.txt  README.md
servers/signaling/config/: signaling.example.toml
servers/signaling/src/: main.cpp  registry.cpp  registry.hpp  server.cpp  server.hpp
servers/signaling/tests/: CMakeLists.txt  test_e2e.cpp  test_fullstack.cpp  test_registry.cpp  test_server.cpp
tools/: CMakeLists.txt
tools/chatdemo/: main.cpp
tools/connectdemo/: main.cpp
tools/contactsdemo/: main.cpp
tools/keygen/: main.cpp
tools/persistdemo/: main.cpp
tools/simnet/: main.cpp
